--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+.idea
+#ignore thumbnails created by windows
+Thumbs.db
 
-# Test binary, build with `go test -c`
-*.test
+## File-based project format:
+*.iws
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+# mpeltonen/sbt-idea plugin
+.idea_modules/
+
+# JIRA plugin
+atlassian-ide-plugin.xml
+
+main
+
+docker-compose.yml
